CHANGES IN FLTK 1.1.0b12

	- Drag'n'drop support for MacOS


CHANGES IN FLTK 1.1.0b11

	- Now conditionally use the WIN32 TrackMouseEvent API
	  (default is no...)
	- Fixed a table rendering bug in the Fl_Help_View
	  widget.
	- The fltk-config script now recognizes all common C++
	  extensions.
	- The menu code was using overlay visuals when the
	  scheme was set to "plastic".
	- Fixed some drawing problems with Fl_Light_Button and
	  its subclasses.
	- Fixed a minor event propagation bug in Fl_Group that
	  caused mousewheel events to be passed to scrollbars
	  that were not visible.
	- The fl_file_chooser() function did not preserve the
	  old file/directory like the old file chooser did.
	- The prototypes for fl_input() and fl_password() did
	  not default the "default value" to NULL.
	- Fl_Tabs now draws tabs using the selection_color() of
	  the child groups; this allows the tabs to be colored
	  separately from the body.  Selected tabs are a mix of
	  the Fl_Tabs selection_color() and the child group's
	  selection_color().
	- Fl_Tabs didn't include images in the measurement of
	  the tabs if no label text was defined.
	- The WIN32 code didn't return 0 from the window
	  procedure after handling WM_PAINT messages.
	- fl_draw() would incorrectly test the clipping of
	  labels the lay outside the bounding box.
	- filename_relative() didn't always return the correct
	  relative path.
	- Updated the test makefile to work with more versions
	  of "make".
	- Added new "--with-optim" configure option to set the
	  optimization flags to use when compiling FLTK.
	- The fltk-config script no longer reports the
	  optimization flags that were used to compile FLTK.
	- Initial port of FLTK 2.0 drag-and-drop support.


CHANGES IN FLTK 1.1.0b10

	- Fixed the new WIN32 TrackMouseEvent code.
	- Fixed the VC++ project files to link against
	  comctl32.lib.


CHANGES IN FLTK 1.1.0b9

	- Better FL_LEAVE event handling for WIN32.
	- The alpha mask was bit-reversed.