@@ -1,6 +1,7 @@
 CHANGES IN FLTK 1.1.0b12
 
 	- Drag'n'drop support for MacOS
+	- Updated Mac OSIssues documentation
 
 
 CHANGES IN FLTK 1.1.0b11
